# sos

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
benches/: sandbox_performance.rs
examples/rl/: README.md  all_experiments.py  benchmark.py  load_scenarios.py  project_types.py  pyproject.toml  rollout.py  train.py
examples/synthetic_generator/: generation.py  sos.py
examples/vf-rl/: main.py  pyproject.toml  train.py
examples/vf-rl/environments/vf_sos/: README.md  pyproject.toml  vf_sos.py
scripts/: crun.sh
src/: lib.rs  main.rs  tui.rs
src/cli/: main.rs  tui.rs
src/lib/: http.rs  mod.rs  sandbox.rs
src/lib/sandbox/: io.rs  mod.rs  shell.rs  types.rs
tests/: integration_tests.rs
