[package]
name = "sos"
version = "0.0.7"
edition = "2024"

[lib]
name = "sos"
path = "src/lib/mod.rs"

[[bin]]
name = "sos"
path = "src/cli/main.rs"

[[bench]]
name = "sandbox_performance"
harness = false

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bollard = "0.19.1"
bytes = "1.10.1"
futures = "0.3.31"
serde = "1.0.219"
serde_json = "1.0.141"
tokio = {version = "1.46.1", features = ["rt-multi-thread"]}
uuid = {version = "1.17.0", features = ["v4"]}
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2.0.12"
ratatui = "0.28"
crossterm = "0.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
strip-ansi-escapes = "0.2.0"
regex = "1.11.1"
const_format = "0.2.34"
lazy_static = "1.5.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.test]
inherits = "release"
