[project]
name = "vf-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "verifiers",
]

[tool.uv.sources]
verifiers = { git = "https://github.com/willccbb/verifiers.git" }
